<resources>
    <string name="app_name">Mi Biblioteca Musical</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="UsuarioLogin">Usuario 👤</string>
    <string name="ContrasenyaLogin">Contraseña 🔒</string>
    <string name="Login">💘 Login 💘</string>
    <string name="Registrarse">💘 Registrarse 💘</string>
    <string name="loginTexto">Login to Jaumefy</string>
    <string name="description_image_photo">Imagen de la canción</string>
    <string name="home">Home</string>
    <string name="find">Find</string>
    <string name="library">Library</string>
    <string name="RegistertoJaumefy">Register to Jaumefy</string>
    <string name="UsuarioRegister">Usuario 👤</string>
    <string name="EmailRegister">Email 💌</string>
    <string name="DateRegister">Fecha nacimiento</string>
    <string name="CrearUsuario">💘 Crear Usuario 💘</string>
    <string name="nombreAlbum">Nombre album</string>
    <string name="playlistName">Nombre playlist</string>
    <string name="DiaNacimiento">Dia</string>
    <string name="MesNacimiento">Mes</string>
    <string name="AnyoNacimiento">Anyo</string>
    <string name="GeneroRegister">Genero ♂️♀️</string>
    <string name="PaisRegister">Pais 🌍</string>
    <string name="CodigoPostalRegister">Codigo Postal 💟</string>
    <string name="CodigoPostal">Codigo Postal 💟</string>
    <string name="helper_required">Rellena los campos</string>
    <string name="edit_store_message_valid">Valores validos</string>
    <string name="BuscadorFind">Busca una cancion 💖</string>
    <string name="crear_playlist">Crear playlist</string>
    <string name="string_creator">Nueva Playlist</string>
    <string name="btn_text_save">Guardar playlist</string>
    <string name="title_hint">Título de la playlist</string>
    <string name="num_songs_hint">Número de canciones</string>
    <string name="date_hint">Fecha de creación</string>
    <string name="nombre_podcast">Nombre podcast</string>
    <string name="patrocinadoAlbum">Patrocinado</string>
    <string name="playlistDuracion">Duracion</string>
    <string name="playlistCanciones">Canciones:</string>
    <string name="playlistCancionesNumero">9</string>
    <string name="tvPlaylistTitulo">❣️ Playlist ❣️</string>
    <string name="tvPodcastTitulo">❣️ Podcast ❣️</string>
    <string name="tvAlbumTitulo">❣️ Album ❣️</string>
</resources>