<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/seed"
    android:clickable="true"
    android:focusable="true"
    tools:context=".NewPlaylistFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTitleCreator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_layout_height"
        android:backgroundTint="@color/md_theme_light_primary"
        app:cardCornerRadius="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_creator"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/md_theme_light_onPrimary"
            android:layout_gravity="center"
            >

        </TextView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_save"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNumCanciones"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_default"
        android:hint="@string/title_hint"
        android:background="@color/md_theme_light_primaryContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvTitleCreator"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/etNumCanciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_default"
        android:hint="@string/num_songs_hint"
        android:background="@color/md_theme_light_primaryContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>