<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primaryContainer"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/md_theme_light_shadow"
        android:text="@string/RegistertoJaumefy"
        android:textAlignment="center"
        android:textSize="@dimen/textoTitulo"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilUserRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/UsuarioRegister"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintEnd_toEndOf="@id/tvRegister"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPasswordRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/ContrasenyaLogin"
        app:layout_constraintTop_toBottomOf="@id/ilUserRegister"
        app:layout_constraintStart_toStartOf="@id/ilUserRegister"
        app:layout_constraintEnd_toEndOf="@id/ilUserRegister">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilEmailRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/EmailRegister"
        app:layout_constraintTop_toBottomOf="@id/ilPasswordRegister"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintEnd_toEndOf="@id/tvRegister"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilFechaRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_default"
        android:hint="@string/DateRegister"
        app:layout_constraintTop_toBottomOf="@id/ilEmailRegister"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintEnd_toEndOf="@id/tvRegister"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFechaRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CrearUsuario"
        app:layout_constraintTop_toBottomOf="@id/ilFechaRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    </com.google.android.material.button.MaterialButton>



</androidx.constraintlayout.widget.ConstraintLayout>